fix z-index in action button

--- a/sources/styles/identity/list.scss
+++ b/sources/styles/identity/list.scss
@@ -7,7 +7,7 @@
     position: absolute;
     right: 0;
     top: 2.5em;
-    z-index: 10;
+    z-index: 1;
 
     @media (min-width: 767px) {
       transform: translate3d(0, 0, 0);
